[project]
name = "wharfreenet-segmenter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
